--- a/MiBio-Webapp/src/index.html
+++ b/MiBio-Webapp/src/index.html
@@ -11,6 +11,7 @@
 
     <!-- build:css css/main.css -->
     <link href="../components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../components/holdon/src/css/HoldOn.min.css" rel="stylesheet">
     <link href="styles/main.css" rel="stylesheet">
     <!-- endbuild -->
 
@@ -19,6 +20,7 @@
     <script src="../components/FileSaver/FileSaver.js"></script>
     <script src="../components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="../components/angular/angular.min.js"></script>
+    <script src="../components/holdon/src/js/HoldOn.min.js"></script>
     <!-- endbuild -->
     <!-- build:js js/main.js -->
     <script src="scripts/main.js"></script>
@@ -50,95 +52,96 @@
     </nav>
 
     <div id="wrapper" class="container" ng-app="mibioApp">
-      <div ng-controller="AppStateController as stateCtrl">
+      <div id="main" ng-controller="AppStateController as stateCtrl">
 
-        <div ng-controller="UserInputController as inputCtrl" ng-show="stateCtrl.state === stateCtrl.states.READY">
-          <div id="header" class="row">
-            <span id="show-text"></span>
-          </div>
-          <div class="row">
-            <div class="col-md-4 col-md-offset-4">
-              <div ng-hide="inputCtrl.content">
-                <span class="file-input btn btn-lg btn-block btn-info btn-file">
-                  Select OCR file <input type="file" on-read-file="inputCtrl.read($fileContent)" />
-                </span>
-              </div>
-              <div ng-show="inputCtrl.content">
-                <button class="btn btn-lg btn-block btn-primary" ng-click="stateCtrl.submit()">Correct {{inputCtrl.file.name}}</button>
-              </div>
+        <div ng-controller="DisplayController as displayCtrl">
+          <div ng-show="stateCtrl.isReady()" ng-controller="UserInputController as inputCtrl">
+            <div id="header" class="row">
+              <span id="show-text"></span>
             </div>
-          </div>
-          <div id="advopt-panel" class="row">
-            <div class="center">
-              <span class="help-block">
-                {{inputCtrl.label}}
-              </span>
-              <div ng-show="inputCtrl.show">
-                <div class="row center">
-                  <div class="col-md-3"></div>
-                  <div class="col-md-1" ng-repeat="component in inputCtrl.components">
-                    <input type="checkbox" ng-checked="component.selected"> {{component.name}}
-                  </div>
+            <div class="row">
+              <div class="col-md-4 col-md-offset-4">
+                <div ng-hide="inputCtrl.content">
+                  <span class="file-input btn btn-lg btn-block btn-info btn-file">
+                    Select OCR file <input type="file" on-read-file="inputCtrl.read($fileContent)" />
+                  </span>
+                </div>
+                <div ng-show="inputCtrl.content">
+                  <button class="btn btn-lg btn-block btn-primary" ng-click="stateCtrl.submit(inputCtrl, displayCtrl)">Correct {{inputCtrl.file.name}}</button>
                 </div>
               </div>
-              <button type="button" class="btn btn-default" ng-click="inputCtrl.togglePanel()">
-                <span class="glyphicon" ng-class="{'glyphicon-chevron-down': !inputCtrl.show, 'glyphicon-chevron-up': inputCtrl.show}"></span>
-              </button>
             </div>
-          </div>
-        </div>
-
-        <div ng-show="stateCtrl.state === stateCtrl.states.WAIT">
-          <div id="header" class="row"></div>
-          <div class="row center">
-            <button type="button" class="btn btn-default" ng-click="stateCtrl.responsed()">Assume we are waiting for responce. Click to finish waiting...</button>
-          </div>
-        </div>
-
-        <div ng-show="stateCtrl.state === stateCtrl.states.PROCESSED" ng-controller="DisplayController as displayCtrl">
-          <div class="row">
-            <div class="col-md-7 content-display">
-              <span ng-repeat="error in displayCtrl.errors">
-                {{displayCtrl.beforeError($index)}}<error state={{error.state}} ng-click="displayCtrl.display($index)" ng-right-click="displayCtrl.check($index)">{{error.display}}</error>{{displayCtrl.afterError($index)}}
-              </span>
-            </div>
-
-            <div class="col-md-4 col-md-offset-1">
-              <div>
-                <button type="button" class="btn btn-default" ng-click="displayCtrl.checkAll()">Check all</button>
-                <button type="button" class="btn btn-default" ng-click="displayCtrl.download()">Download corrected file</button>
-              </div>
-              <hr>
-              Errors: {{displayCtrl.numErrors()}}  <span class="col-md-offset-6">Checked: {{displayCtrl.numChecked()}}</span>
-              <hr>
-              <div ng-repeat="error in displayCtrl.errors">
-                <error state={{error.state}} ng-click="displayCtrl.display($index)" ng-right-click="displayCtrl.check($index)">{{error.display}}</error>
-                <ul ng-show="displayCtrl.curr === $index">
-                  <li ng-click="displayCtrl.select($index)"
-                      ng-right-click="displayCtrl.select($index)">{{error.name}} (-)</li>
-                  <li ng-repeat="candidate in displayCtrl.errors[$index].candidates"
-                      ng-click="displayCtrl.select($parent.$index, $index)"
-                      ng-right-click="displayCtrl.select($parent.$index, $index)">
-                    {{candidate.name}} ({{candidate.confidence}})
-                  </li>
-                </ul>
+            <div id="advopt-panel" class="row">
+              <div class="center">
+                <span class="help-block">
+                  {{inputCtrl.label}}
+                </span>
+                <div ng-show="inputCtrl.show">
+                  <div class="row center">
+                    <div class="col-md-3"></div>
+                    <div class="col-md-1" ng-repeat="component in inputCtrl.components">
+                      <input type="checkbox" ng-checked="component.selected"> {{component.name}}
+                    </div>
+                  </div>
+                </div>
+                <button type="button" class="btn btn-default" ng-click="inputCtrl.togglePanel()">
+                  <span class="glyphicon" ng-class="{'glyphicon-chevron-down': !inputCtrl.show, 'glyphicon-chevron-up': inputCtrl.show}"></span>
+                </button>
               </div>
             </div>
           </div>
-        </div>
 
+          <div ng-show="stateCtrl.isWait()">
+            <!--
+            <div id="header" class="row"></div>
+            <div class="row center">
+              <button type="button" class="btn btn-default" ng-click="stateCtrl.responsed()">Assume we are waiting for responce. Click to finish waiting...</button>
+            </div>
+            -->
+          </div>
+
+          <div ng-show="stateCtrl.isProcessed()">
+            <div class="row">
+              <div class="col-md-7 content-display">
+                <span ng-repeat="error in displayCtrl.errors">
+                  {{displayCtrl.beforeError($index)}}<error id="err-{{$index}}" state={{error.state}} ng-click="displayCtrl.display($index)" ng-right-click="displayCtrl.check($index)">{{error.display}}</error>{{displayCtrl.afterError($index)}}
+                </span>
+              </div>
+
+              <div class="col-md-4 col-md-offset-1">
+                <div>
+                  <button type="button" class="btn btn-default" ng-click="displayCtrl.checkAll()">Check all</button>
+                  <button type="button" class="btn btn-default" ng-click="displayCtrl.download()">Download corrected file</button>
+                </div>
+                <hr>
+                Errors: {{displayCtrl.numErrors()}}  <span class="col-md-offset-6">Checked: {{displayCtrl.numChecked()}}</span>
+                <hr>
+                <div ng-repeat="error in displayCtrl.errors">
+                  <error state={{error.state}} ng-click="displayCtrl.display($index)" ng-right-click="displayCtrl.check($index)">{{error.display}}</error>
+                  <ul ng-show="displayCtrl.curr === $index">
+                    <li ng-click="displayCtrl.select($index)"
+                        ng-right-click="displayCtrl.select($index)">{{error.name}} (-)</li>
+                    <li ng-repeat="candidate in displayCtrl.errors[$index].candidates"
+                        ng-click="displayCtrl.select($parent.$index, $index)"
+                        ng-right-click="displayCtrl.select($parent.$index, $index)">
+                      {{candidate.name}} ({{candidate.confidence}})
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div><!-- #wrapper -->
 
-    <div class="footer">
-      <footer>
-        <div class="col-lg-12">
-          <span class="help-block">
-            Visual Text Analytics Lab, Dalhousie University, 2015
-          </span>
-        </div>
-      </footer>
-    </div>
+    <footer class="footer">
+      <div class="col-lg-12">
+        <span class="help-block">
+          Visual Text Analytics Lab, Dalhousie University, 2015
+        </span>
+      </div>
+    </footer>
 
     <!-- The about menu. -->
     <div id="about" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="about-title" aria-hidden="true">
